# daybreak

./: CMakeLists.txt  List  README.md  vision-pw-final.txt  vision-pw-revised.txt
AX12/: AX12  AX12.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  elpbasic.cpp  elpi2c.cpp  elpi2c.cpp.save.1  elpmove.cpp  publicjoint.cpp  publicjoint.h  sensor.c
I2C/: CMakeCache.txt  CMakeLists.txt  I2C  I2C.cpp  LSM303DLHC.cpp  Makefile  backUpI2C.cpp  backup2_I2C.cpp  cmake_install.cmake  mineI2C.cpp
OCVku/: CMakeCache.txt  CMakeLists.txt  Makefile  OCVku  OCVku.cpp  cmake_install.cmake
Vision/: CMakeLists.txt
Vision 2/: Elpistolero_vision.cpp  elpistoleroVisionLib.h
project_alfa/: Makefile  cmake_install.cmake
project_alfa-ocvpi/: CMakeCache.txt  CMakeLists.txt  ocvpi.cpp
project_beta_raspicam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  grab.c
project_chaos/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
project_chernobyl/: image.ppm  image_asli.ppm
project_chernobyl-raspicamcv/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  image_gray.ppm  image_hsv.ppm
project_delta/: Makefile  README  install_manifest.txt
project_delta-corner_det/: CPackSourceConfig.cmake
project_epsilon/: CMakeCache.txt  CPackConfig.cmake  cmake_uninstall.cmake
project_epsilon-raspicamcv2/: Makefile  cmake_install.cmake
project_epsilon/utils/: CMakeLists.txt  Makefile
project_frost-jpeg_stream/: mjpg_streamer
project_io/: CMakeLists.txt  UART.cpp  cmake_install.cmake
project_ion-UART/: CMakeCache.txt  Makefile
project_jaguar-wify_python/: CMakeLists.txt  wifi.py
project_king-tshark_note/: doc_tshark
project_lambda-doc_wifi/: doc_wifi
project_maestro-pptp/: doc_pptp_client
project_magnet-get_dir/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code.cpp  magnet
project_nearfield/: CPackConfig.cmake  cmake_install.cmake
project_nearfield-goalpost_det/: CMakeCache.txt  CPackSourceConfig.cmake  Makefile  cmake_uninstall.cmake
project_nearfield-goalpost_det/utils/: CMakeLists.txt  Makefile  backup200414  backup200414.cpp  cmake_install.cmake  raspicam_cv_test  raspicam_cv_test.cpp.save.1  raspicam_cv_test.cpp.save.3  raspicam_test
project_omega-ball_det/: cmake_uninstall.cmake  (+1 more)
project_tesla-gawang_FINAL/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  raspicam_cv_test  raspicam_cv_test.cpp  raspicam_cv_test.cpp.save  raspicam_test  raspicam_test.cpp
(+142 files in other folders)
